<resources>

    <string name="START"> حَسبِیَ اللهُ تَوَکَّلتُ عَلَی اللهُ اَللهمَّ اُنُّی اَسئَلُکَ خَیرَ اُموری کُلَّها وَاَعوذُ بُکَ مُن خِزیِ الدُّنیا وَعَذابِ الاخِرةِ
    /////////
                بِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِیم
حم ﴿١﴾ تَنْزِیلُ الْکِتَابِ مِنَ اللَّهِ الْعَزِیزِ الْعَلِیمِ ﴿٢﴾ غَافِرِ الذَّنْبِ وَقَابِلِ التَّوْبِ شَدِیدِ الْعِقَابِ ذِی الطَّوْلِ لا إِلَهَ إِلا هُوَ إِلَیْهِ الْمَصِیرُ ﴿٣﴾ مَا یُجَادِلُ فِی آیَاتِ اللَّهِ إِلا الَّذِینَ کَفَرُوا فَلا یَغْرُرْکَ تَقَلُّبُهُمْ فِی الْبِلادِ ﴿٤﴾ کَذَّبَتْ قَبْلَهُمْ قَوْمُ نُوحٍ وَالأحْزَابُ مِنْ بَعْدِهِمْ وَهَمَّتْ کُلُّ أُمَّةٍ بِرَسُولِهِمْ لِیَأْخُذُوهُ وَجَادَلُوا بِالْبَاطِلِ لِیُدْحِضُوا بِهِ الْحَقَّ فَأَخَذْتُهُمْ فَکَیْفَ کَانَ عِقَابِ ﴿٥﴾ وَکَذَلِکَ حَقَّتْ کَلِمَةُ رَبِّکَ عَلَى الَّذِینَ کَفَرُوا أَنَّهُمْ أَصْحَابُ النَّارِ ﴿٦﴾ الَّذِینَ یَحْمِلُونَ الْعَرْشَ وَمَنْ حَوْلَهُ یُسَبِّحُونَ بِحَمْدِ رَبِّهِمْ وَیُؤْمِنُونَ بِهِ وَیَسْتَغْفِرُونَ لِلَّذِینَ آمَنُوا رَبَّنَا وَسِعْتَ کُلَّ شَیْءٍ رَحْمَةً وَعِلْمًا فَاغْفِرْ لِلَّذِینَ تَابُوا وَاتَّبَعُوا سَبِیلَکَ وَقِهِمْ عَذَابَ الْجَحِیمِ ﴿٧﴾ رَبَّنَا وَأَدْخِلْهُمْ جَنَّاتِ عَدْنٍ الَّتِی وَعَدْتَهُمْ وَمَنْ صَلَحَ مِنْ آبَائِهِمْ وَأَزْوَاجِهِمْ وَذُرِّیَّاتِهِمْ إِنَّکَ أَنْتَ الْعَزِیزُ الْحَکِیمُ ﴿٨﴾ وَقِهِمُ السَّیِّئَاتِ وَمَنْ تَقِ السَّیِّئَاتِ یَوْمَئِذٍ فَقَدْ رَحِمْتَهُ وَذَلِکَ هُوَ الْفَوْزُ الْعَظِیمُ ﴿٩﴾ إِنَّ الَّذِینَ کَفَرُوا یُنَادَوْنَ لَمَقْتُ اللَّهِ أَکْبَرُ مِنْ مَقْتِکُمْ أَنْفُسَکُمْ إِذْ تُدْعَوْنَ إِلَى الإیمَانِ فَتَکْفُرُونَ ﴿١٠﴾ قَالُوا رَبَّنَا أَمَتَّنَا اثْنَتَیْنِ وَأَحْیَیْتَنَا اثْنَتَیْنِ فَاعْتَرَفْنَا بِذُنُوبِنَا فَهَلْ إِلَى خُرُوجٍ مِنْ سَبِیلٍ ﴿١١﴾ ذَلِکُمْ بِأَنَّهُ إِذَا دُعِیَ اللَّهُ وَحْدَهُ کَفَرْتُمْ وَإِنْ یُشْرَکْ بِهِ تُؤْمِنُوا فَالْحُکْمُ لِلَّهِ الْعَلِیِّ الْکَبِیرِ ﴿١٢﴾ هُوَ الَّذِی یُرِیکُمْ آیَاتِهِ وَیُنَزِّلُ لَکُمْ مِنَ السَّمَاءِ رِزْقًا وَمَا یَتَذَکَّرُ إِلا مَنْ یُنِیبُ ﴿١٣﴾ فَادْعُوا اللَّهَ مُخْلِصِینَ لَهُ الدِّینَ وَلَوْ کَرِهَ الْکَافِرُونَ ﴿١٤﴾ رَفِیعُ الدَّرَجَاتِ ذُو الْعَرْشِ یُلْقِی الرُّوحَ مِنْ أَمْرِهِ عَلَى مَنْ یَشَاءُ مِنْ عِبَادِهِ لِیُنْذِرَ یَوْمَ التَّلاقِ ﴿١٥﴾ یَوْمَ هُمْ بَارِزُونَ لا یَخْفَى عَلَى اللَّهِ مِنْهُمْ شَیْءٌ لِمَنِ الْمُلْکُ الْیَوْمَ لِلَّهِ الْوَاحِدِ الْقَهَّارِ ﴿١٦﴾ الْیَوْمَ تُجْزَى کُلُّ نَفْسٍ بِمَا کَسَبَتْ لا ظُلْمَ الْیَوْمَ إِنَّ اللَّهَ سَرِیعُ الْحِسَابِ ﴿١٧﴾ وَأَنْذِرْهُمْ یَوْمَ الآزِفَةِ إِذِ الْقُلُوبُ لَدَى الْحَنَاجِرِ کَاظِمِینَ مَا لِلظَّالِمِینَ مِنْ حَمِیمٍ وَلا شَفِیعٍ یُطَاعُ ﴿١٨﴾ یَعْلَمُ خَائِنَةَ الأعْیُنِ وَمَا تُخْفِی الصُّدُورُ ﴿١٩﴾ وَاللَّهُ یَقْضِی بِالْحَقِّ وَالَّذِینَ یَدْعُونَ مِنْ دُونِهِ لا یَقْضُونَ بِشَیْءٍ إِنَّ اللَّهَ هُوَ السَّمِیعُ الْبَصِیرُ ﴿٢٠﴾ أَوَلَمْ یَسِیرُوا فِی الأرْضِ فَیَنْظُرُوا کَیْفَ کَانَ عَاقِبَةُ الَّذِینَ کَانُوا مِنْ قَبْلِهِمْ کَانُوا هُمْ أَشَدَّ مِنْهُمْ قُوَّةً وَآثَارًا فِی الأرْضِ فَأَخَذَهُمُ اللَّهُ بِذُنُوبِهِمْ وَمَا کَانَ لَهُمْ مِنَ اللَّهِ مِنْ وَاقٍ ﴿٢١﴾ ذَلِکَ بِأَنَّهُمْ کَانَتْ تَأْتِیهِمْ رُسُلُهُمْ بِالْبَیِّنَاتِ فَکَفَرُوا فَأَخَذَهُمُ اللَّهُ إِنَّهُ قَوِیٌّ شَدِیدُ الْعِقَابِ ﴿٢٢﴾ وَلَقَدْ أَرْسَلْنَا مُوسَى بِآیَاتِنَا وَسُلْطَانٍ مُبِینٍ ﴿٢٣﴾ إِلَى فِرْعَوْنَ وَهَامَانَ وَقَارُونَ فَقَالُوا سَاحِرٌ کَذَّابٌ ﴿٢٤﴾ فَلَمَّا جَاءَهُمْ بِالْحَقِّ مِنْ عِنْدِنَا قَالُوا اقْتُلُوا أَبْنَاءَ الَّذِینَ آمَنُوا مَعَهُ وَاسْتَحْیُوا نِسَاءَهُمْ وَمَا کَیْدُ الْکَافِرِینَ إِلا فِی ضَلالٍ ﴿٢٥﴾ وَقَالَ فِرْعَوْنُ ذَرُونِی أَقْتُلْ مُوسَى وَلْیَدْعُ رَبَّهُ إِنِّی أَخَافُ أَنْ یُبَدِّلَ دِینَکُمْ أَوْ أَنْ یُظْهِرَ فِی الأرْضِ الْفَسَادَ ﴿٢٦﴾ وَقَالَ مُوسَى إِنِّی عُذْتُ بِرَبِّی وَرَبِّکُمْ مِنْ کُلِّ مُتَکَبِّرٍ لا یُؤْمِنُ بِیَوْمِ الْحِسَابِ ﴿٢٧﴾ وَقَالَ رَجُلٌ مُؤْمِنٌ مِنْ آلِ فِرْعَوْنَ یَکْتُمُ إِیمَانَهُ أَتَقْتُلُونَ رَجُلا أَنْ یَقُولَ رَبِّیَ اللَّهُ وَقَدْ جَاءَکُمْ بِالْبَیِّنَاتِ مِنْ رَبِّکُمْ وَإِنْ یَکُ کَاذِبًا فَعَلَیْهِ کَذِبُهُ وَإِنْ یَکُ صَادِقًا یُصِبْکُمْ بَعْضُ الَّذِی یَعِدُکُمْ إِنَّ اللَّهَ لا یَهْدِی مَنْ هُوَ مُسْرِفٌ کَذَّابٌ ﴿٢٨﴾ یَا قَوْمِ لَکُمُ الْمُلْکُ الْیَوْمَ ظَاهِرِینَ فِی الأرْضِ فَمَنْ یَنْصُرُنَا مِنْ بَأْسِ اللَّهِ إِنْ جَاءَنَا قَالَ فِرْعَوْنُ مَا أُرِیکُمْ إِلا مَا أَرَى وَمَا أَهْدِیکُمْ إِلا سَبِیلَ الرَّشَادِ ﴿٢٩﴾ وَقَالَ الَّذِی آمَنَ یَا قَوْمِ إِنِّی أَخَافُ عَلَیْکُمْ مِثْلَ یَوْمِ الأحْزَابِ ﴿٣٠﴾ مِثْلَ دَأْبِ قَوْمِ نُوحٍ وَعَادٍ وَثَمُودَ وَالَّذِینَ مِنْ بَعْدِهِمْ وَمَا اللَّهُ یُرِیدُ ظُلْمًا لِلْعِبَادِ ﴿٣١﴾ وَیَا قَوْمِ إِنِّی أَخَافُ عَلَیْکُمْ یَوْمَ التَّنَادِ ﴿٣٢﴾ یَوْمَ تُوَلُّونَ مُدْبِرِینَ مَا لَکُمْ مِنَ اللَّهِ مِنْ عَاصِمٍ وَمَنْ یُضْلِلِ اللَّهُ فَمَا لَهُ مِنْ هَادٍ ﴿٣٣﴾ وَلَقَدْ جَاءَکُمْ یُوسُفُ مِنْ قَبْلُ بِالْبَیِّنَاتِ فَمَا زِلْتُمْ فِی شَکٍّ مِمَّا جَاءَکُمْ بِهِ حَتَّى إِذَا هَلَکَ قُلْتُمْ لَنْ یَبْعَثَ اللَّهُ مِنْ بَعْدِهِ رَسُولا کَذَلِکَ یُضِلُّ اللَّهُ مَنْ هُوَ مُسْرِفٌ مُرْتَابٌ ﴿٣٤﴾ الَّذِینَ یُجَادِلُونَ فِی آیَاتِ اللَّهِ بِغَیْرِ سُلْطَانٍ أَتَاهُمْ کَبُرَ مَقْتًا عِنْدَ اللَّهِ وَعِنْدَ الَّذِینَ آمَنُوا کَذَلِکَ یَطْبَعُ اللَّهُ عَلَى کُلِّ قَلْبِ مُتَکَبِّرٍ جَبَّارٍ ﴿٣٥﴾ وَقَالَ فِرْعَوْنُ یَا هَامَانُ ابْنِ لِی صَرْحًا لَعَلِّی أَبْلُغُ الأسْبَابَ ﴿٣٦﴾ أَسْبَابَ السَّمَاوَاتِ فَأَطَّلِعَ إِلَى إِلَهِ مُوسَى وَإِنِّی لأظُنُّهُ کَاذِبًا وَکَذَلِکَ زُیِّنَ لِفِرْعَوْنَ سُوءُ عَمَلِهِ وَصُدَّ عَنِ السَّبِیلِ وَمَا کَیْدُ فِرْعَوْنَ إِلا فِی تَبَابٍ ﴿٣٧﴾ وَقَالَ الَّذِی آمَنَ یَا قَوْمِ اتَّبِعُونِ أَهْدِکُمْ سَبِیلَ الرَّشَادِ ﴿٣٨﴾ یَا قَوْمِ إِنَّمَا هَذِهِ الْحَیَاةُ الدُّنْیَا مَتَاعٌ وَإِنَّ الآخِرَةَ هِیَ دَارُ الْقَرَارِ ﴿٣٩﴾ مَنْ عَمِلَ سَیِّئَةً فَلا یُجْزَى إِلا مِثْلَهَا وَمَنْ عَمِلَ صَالِحًا مِنْ ذَکَرٍ أَوْ أُنْثَى وَهُوَ مُؤْمِنٌ فَأُولَئِکَ یَدْخُلُونَ الْجَنَّةَ یُرْزَقُونَ فِیهَا بِغَیْرِ حِسَابٍ ﴿٤٠﴾ وَیَا قَوْمِ مَا لِی أَدْعُوکُمْ إِلَى النَّجَاةِ وَتَدْعُونَنِی إِلَى النَّارِ ﴿٤١﴾ تَدْعُونَنِی لأکْفُرَ بِاللَّهِ وَأُشْرِکَ بِهِ مَا لَیْسَ لِی بِهِ عِلْمٌ وَأَنَا أَدْعُوکُمْ إِلَى الْعَزِیزِ الْغَفَّارِ ﴿٤٢﴾ لا جَرَمَ أَنَّمَا تَدْعُونَنِی إِلَیْهِ لَیْسَ لَهُ دَعْوَةٌ فِی الدُّنْیَا وَلا فِی الآخِرَةِ وَأَنَّ مَرَدَّنَا إِلَى اللَّهِ وَأَنَّ الْمُسْرِفِینَ هُمْ أَصْحَابُ النَّارِ ﴿٤٣﴾ فَسَتَذْکُرُونَ مَا أَقُولُ لَکُمْ وَأُفَوِّضُ أَمْرِی إِلَى اللَّهِ إِنَّ اللَّهَ بَصِیرٌ بِالْعِبَادِ ﴿٤٤﴾ فَوَقَاهُ اللَّهُ سَیِّئَاتِ مَا مَکَرُوا وَحَاقَ بِآلِ فِرْعَوْنَ سُوءُ الْعَذَابِ ﴿٤٥﴾ النَّارُ یُعْرَضُونَ عَلَیْهَا غُدُوًّا وَعَشِیًّا وَیَوْمَ تَقُومُ السَّاعَةُ أَدْخِلُوا آلَ فِرْعَوْنَ أَشَدَّ الْعَذَابِ ﴿٤٦﴾ وَإِذْ یَتَحَاجُّونَ فِی النَّارِ فَیَقُولُ الضُّعَفَاءُ لِلَّذِینَ اسْتَکْبَرُوا إِنَّا کُنَّا لَکُمْ تَبَعًا فَهَلْ أَنْتُمْ مُغْنُونَ عَنَّا نَصِیبًا مِنَ النَّارِ ﴿٤٧﴾ قَالَ الَّذِینَ اسْتَکْبَرُوا إِنَّا کُلٌّ فِیهَا إِنَّ اللَّهَ قَدْ حَکَمَ بَیْنَ الْعِبَادِ ﴿٤٨﴾ وَقَالَ الَّذِینَ فِی النَّارِ لِخَزَنَةِ جَهَنَّمَ ادْعُوا رَبَّکُمْ یُخَفِّفْ عَنَّا یَوْمًا مِنَ الْعَذَابِ ﴿٤٩﴾ قَالُوا أَوَ لَمْ تَکُ تَأْتِیکُمْ رُسُلُکُمْ بِالْبَیِّنَاتِ قَالُوا بَلَى قَالُوا فَادْعُوا وَمَا دُعَاءُ الْکَافِرِینَ إِلا فِی ضَلالٍ ﴿٥٠﴾ إِنَّا لَنَنْصُرُ رُسُلَنَا وَالَّذِینَ آمَنُوا فِی الْحَیَاةِ الدُّنْیَا وَیَوْمَ یَقُومُ الأشْهَادُ ﴿٥١﴾ یَوْمَ لا یَنْفَعُ الظَّالِمِینَ مَعْذِرَتُهُمْ وَلَهُمُ اللَّعْنَةُ وَلَهُمْ سُوءُ الدَّارِ ﴿٥٢﴾ وَلَقَدْ آتَیْنَا مُوسَى الْهُدَى وَأَوْرَثْنَا بَنِی إِسْرَائِیلَ الْکِتَابَ ﴿٥٣﴾ هُدًى وَذِکْرَى لأولِی الألْبَابِ ﴿٥٤﴾ فَاصْبِرْ إِنَّ وَعْدَ اللَّهِ حَقٌّ وَاسْتَغْفِرْ لِذَنْبِکَ وَسَبِّحْ بِحَمْدِ رَبِّکَ بِالْعَشِیِّ وَالإبْکَارِ ﴿٥٥﴾ إِنَّ الَّذِینَ یُجَادِلُونَ فِی آیَاتِ اللَّهِ بِغَیْرِ سُلْطَانٍ أَتَاهُمْ إِنْ فِی صُدُورِهِمْ إِلا کِبْرٌ مَا هُمْ بِبَالِغِیهِ فَاسْتَعِذْ بِاللَّهِ إِنَّهُ هُوَ السَّمِیعُ الْبَصِیرُ ﴿٥٦﴾ لَخَلْقُ السَّمَاوَاتِ وَالأرْضِ أَکْبَرُ مِنْ خَلْقِ النَّاسِ وَلَکِنَّ أَکْثَرَ النَّاسِ لا یَعْلَمُونَ ﴿٥٧﴾ وَمَا یَسْتَوِی الأعْمَى وَالْبَصِیرُ وَالَّذِینَ آمَنُوا وَعَمِلُوا الصَّالِحَاتِ وَلا الْمُسِیءُ قَلِیلا مَا تَتَذَکَّرُونَ ﴿٥٨﴾ إِنَّ السَّاعَةَ لآتِیَةٌ لا رَیْبَ فِیهَا وَلَکِنَّ أَکْثَرَ النَّاسِ لا یُؤْمِنُونَ ﴿٥٩﴾ وَقَالَ رَبُّکُمُ ادْعُونِی أَسْتَجِبْ لَکُمْ إِنَّ الَّذِینَ یَسْتَکْبِرُونَ عَنْ عِبَادَتِی سَیَدْخُلُونَ جَهَنَّمَ دَاخِرِینَ ﴿٦٠﴾ اللَّهُ الَّذِی جَعَلَ لَکُمُ اللَّیْلَ لِتَسْکُنُوا فِیهِ وَالنَّهَارَ مُبْصِرًا إِنَّ اللَّهَ لَذُو فَضْلٍ عَلَى النَّاسِ وَلَکِنَّ أَکْثَرَ النَّاسِ لا یَشْکُرُونَ ﴿٦١﴾ ذَلِکُمُ اللَّهُ رَبُّکُمْ خَالِقُ کُلِّ شَیْءٍ لا إِلَهَ إِلا هُوَ فَأَنَّى تُؤْفَکُونَ ﴿٦٢﴾ کَذَلِکَ یُؤْفَکُ الَّذِینَ کَانُوا بِآیَاتِ اللَّهِ یَجْحَدُونَ ﴿٦٣﴾ اللَّهُ الَّذِی جَعَلَ لَکُمُ الأرْضَ قَرَارًا وَالسَّمَاءَ بِنَاءً وَصَوَّرَکُمْ فَأَحْسَنَ صُوَرَکُمْ وَرَزَقَکُمْ مِنَ الطَّیِّبَاتِ ذَلِکُمُ اللَّهُ رَبُّکُمْ فَتَبَارَکَ اللَّهُ رَبُّ الْعَالَمِینَ ﴿٦٤﴾ هُوَ الْحَیُّ لا إِلَهَ إِلا هُوَ فَادْعُوهُ مُخْلِصِینَ لَهُ الدِّینَ الْحَمْدُ لِلَّهِ رَبِّ الْعَالَمِینَ ﴿٦٥﴾ قُلْ إِنِّی نُهِیتُ أَنْ أَعْبُدَ الَّذِینَ تَدْعُونَ مِنْ دُونِ اللَّهِ لَمَّا جَاءَنِیَ الْبَیِّنَاتُ مِنْ رَبِّی وَأُمِرْتُ أَنْ أُسْلِمَ لِرَبِّ الْعَالَمِینَ ﴿٦٦﴾ هُوَ الَّذِی خَلَقَکُمْ مِنْ تُرَابٍ ثُمَّ مِنْ نُطْفَةٍ ثُمَّ مِنْ عَلَقَةٍ ثُمَّ یُخْرِجُکُمْ طِفْلا ثُمَّ لِتَبْلُغُوا أَشُدَّکُمْ ثُمَّ لِتَکُونُوا شُیُوخًا وَمِنْکُمْ مَنْ یُتَوَفَّى مِنْ قَبْلُ وَلِتَبْلُغُوا أَجَلا مُسَمًّى وَلَعَلَّکُمْ تَعْقِلُونَ ﴿٦٧﴾ هُوَ الَّذِی یُحْیِی وَیُمِیتُ فَإِذَا قَضَى أَمْرًا فَإِنَّمَا یَقُولُ لَهُ کُنْ فَیَکُونُ ﴿٦٨﴾ أَلَمْ تَرَ إِلَى الَّذِینَ یُجَادِلُونَ فِی آیَاتِ اللَّهِ أَنَّى یُصْرَفُونَ ﴿٦٩﴾ الَّذِینَ کَذَّبُوا بِالْکِتَابِ وَبِمَا أَرْسَلْنَا بِهِ رُسُلَنَا فَسَوْفَ یَعْلَمُونَ ﴿٧٠﴾ إِذِ الأغْلالُ فِی أَعْنَاقِهِمْ وَالسَّلاسِلُ یُسْحَبُونَ ﴿٧١﴾ فِی الْحَمِیمِ ثُمَّ فِی النَّارِ یُسْجَرُونَ ﴿٧٢﴾ ثُمَّ قِیلَ لَهُمْ أَیْنَ مَا کُنْتُمْ تُشْرِکُونَ ﴿٧٣﴾ مِنْ دُونِ اللَّهِ قَالُوا ضَلُّوا عَنَّا بَلْ لَمْ نَکُنْ نَدْعُو مِنْ قَبْلُ شَیْئًا کَذَلِکَ یُضِلُّ اللَّهُ الْکَافِرِینَ ﴿٧٤﴾ ذَلِکُمْ بِمَا کُنْتُمْ تَفْرَحُونَ فِی الأرْضِ بِغَیْرِ الْحَقِّ وَبِمَا کُنْتُمْ تَمْرَحُونَ ﴿٧٥﴾ ادْخُلُوا أَبْوَابَ جَهَنَّمَ خَالِدِینَ فِیهَا فَبِئْسَ مَثْوَى الْمُتَکَبِّرِینَ ﴿٧٦﴾ فَاصْبِرْ إِنَّ وَعْدَ اللَّهِ حَقٌّ فَإِمَّا نُرِیَنَّکَ بَعْضَ الَّذِی نَعِدُهُمْ أَوْ نَتَوَفَّیَنَّکَ فَإِلَیْنَا یُرْجَعُونَ ﴿٧٧﴾ وَلَقَدْ أَرْسَلْنَا رُسُلا مِنْ قَبْلِکَ مِنْهُمْ مَنْ قَصَصْنَا عَلَیْکَ وَمِنْهُمْ مَنْ لَمْ نَقْصُصْ عَلَیْکَ وَمَا کَانَ لِرَسُولٍ أَنْ یَأْتِیَ بِآیَةٍ إِلا بِإِذْنِ اللَّهِ فَإِذَا جَاءَ أَمْرُ اللَّهِ قُضِیَ بِالْحَقِّ وَخَسِرَ هُنَالِکَ الْمُبْطِلُونَ ﴿٧٨﴾ اللَّهُ الَّذِی جَعَلَ لَکُمُ الأنْعَامَ لِتَرْکَبُوا مِنْهَا وَمِنْهَا تَأْکُلُونَ ﴿٧٩﴾ وَلَکُمْ فِیهَا مَنَافِعُ وَلِتَبْلُغُوا عَلَیْهَا حَاجَةً فِی صُدُورِکُمْ وَعَلَیْهَا وَعَلَى الْفُلْکِ تُحْمَلُونَ ﴿٨٠﴾ وَیُرِیکُمْ آیَاتِهِ فَأَیَّ آیَاتِ اللَّهِ تُنْکِرُونَ ﴿٨١﴾ أَفَلَمْ یَسِیرُوا فِی الأرْضِ فَیَنْظُرُوا کَیْفَ کَانَ عَاقِبَةُ الَّذِینَ مِنْ قَبْلِهِمْ کَانُوا أَکْثَرَ مِنْهُمْ وَأَشَدَّ قُوَّةً وَآثَارًا فِی الأرْضِ فَمَا أَغْنَى عَنْهُمْ مَا کَانُوا یَکْسِبُونَ ﴿٨٢﴾ فَلَمَّا جَاءَتْهُمْ رُسُلُهُمْ بِالْبَیِّنَاتِ فَرِحُوا بِمَا عِنْدَهُمْ مِنَ الْعِلْمِ وَحَاقَ بِهِمْ مَا کَانُوا بِهِ یَسْتَهْزِئُونَ ﴿٨٣﴾ فَلَمَّا رَأَوْا بَأْسَنَا قَالُوا آمَنَّا بِاللَّهِ وَحْدَهُ وَکَفَرْنَا بِمَا کُنَّا بِهِ مُشْرِکِینَ ﴿٨٤﴾ فَلَمْ یَکُ یَنْفَعُهُمْ إِیمَانُهُمْ لَمَّا رَأَوْا بَأْسَنَا سُنَّةَ اللَّهِ الَّتِی قَدْ خَلَتْ فِی عِبَادِهِ وَخَسِرَ هُنَالِکَ الْکَافِرُونَ ﴿٨٥﴾
    /////////
    </string>

    <string name="app_name">Musigram</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_add">Add</string>
    <string name="title_likes">Likes</string>
    <string name="title_profile">Profile</string>


    ///////////////////////////// search page
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>

</resources>
