<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/title_search" />
    <item
        android:checked="true"
        android:id="@+id/navigation_add"
        android:icon="@drawable/add_song"
        android:title="@string/title_add" />
    <item
        android:id="@+id/navigation_likes"
        android:icon="@drawable/like"
        android:title="@string/title_likes" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/avatar"
        android:title="@string/title_profile" />

</menu>
